rnn x y train test

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 data_id_lab_subt
 sec3_mfcc
 sec3_subtracks
+Processed_data\RNN\X_train
+Processed_data\RNN\X_test
+Processed_data\RNN\y_train
+Processed_data\RNN\y_test
